--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -144,3 +144,48 @@ body {
 #chatRoom .send-input {
   border: 0;
 } 
+
+.thread-container {
+  overflow-y: auto;
+}
+
+.message-container {
+  margin: 10px;
+}
+
+.message-container .message {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 15px 10px;
+}
+
+.message-container.left {
+  margin-right: 20px;
+}
+
+.message-container.right {
+  margin-left: 20px;
+}
+
+.message-container.right .message {
+  background-color: rgb(236, 249,235);
+}
+
+.message-container .time {
+  margin: 5px;
+  font-size: 12px;
+}
+
+.message-container.right .time {
+  color: rgb(112, 201,122);
+}
+
+.message-container.left .time {
+  color: rgb(190, 193,190);
+}
+
+.typing-user {
+  margin: 10px;
+  font-size: 14px;
+  color: #c9c9c9;
+}
