--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -108,17 +108,28 @@ body {
 }
 
 #side-bar .user-photo {
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  border-radius: 50%;
+  border-radius: 100%;
+  padding: 5px;
   background-color: #6c757d;
   color: #fff;
+  height: 30px;
+  width: 30px;
 }
 
 #side-bar .last-message {
   color: #c9c9c9;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
+
+#side-bar .chat-name {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+
 
 /* Chat room */
 #chatRoom {
